--- a/index.html
+++ b/index.html
@@ -1,54 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Course Schedule Builder</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Change The Title</title>
+  <link rel="stylesheet" href="main-style.css">
 </head>
 <body>
-<header>
-    <h1>Course Schedule Builder</h1>
-</header>
-<main>
-    <section id="course-list">
-        <h2>Available Courses</h2>
-        <ul id="sortable">
-        </ul>
-    </section>
-    <section id="schedule-builder">
-        <h2>Schedule Builder</h2>
-        <div id="schedule-calendar">
-            <table id="schedule-table">
-                <thead>
-                <tr>
-                    <th></th>
-                    <th>Monday</th>
-                    <th>Tuesday</th>
-                    <th>Wednesday</th>
-                    <th>Thursday</th>
-                    <th>Friday</th>
-                    <th>Saturday</th>
-                    <th>Sunday</th>
-                </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-        </div>
-    </section>
-</main>
-<div id="schedule-modal" class="modal">
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <h2>Course Schedule</h2>
-        <table id="schedule-table-final">
-        </table>
+  <div class="container">
+    <div class="about">
+      <h1 class="about-header">About</h1>
+      <p class="about-description">
+        Description Here. SAMPLE. SAMPLE. SAMPLE. SAMPLE. SAMPLE.
+        Description Here. SAMPLE. SAMPLE. SAMPLE. SAMPLE. SAMPLE.
+        Description Here. SAMPLE. SAMPLE. SAMPLE. SAMPLE. SAMPLE.
+      </p>
     </div>
-</div>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="script.js"></script>
+    <div class="background">
+      <div class="maroon-stripe"></div>
+      <div class="yellow-stripe"></div>
+      <div class="majors">
+        <button class="cs-major">Computer Science</button>
+        <button class="bm-major">Business Management</button>
+        <button class="ac-major">Accounting</button>
+        <button class="is-major">Information Systems</button>
+      </div>
+    </div>
+  </div>
 </body>
+<script src="main-script.js"></script>
 </html>
