updated main page

--- a/index.html
+++ b/index.html
@@ -3,29 +3,64 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Change The Title</title>
+  <title>BC Course Map</title>
   <link rel="stylesheet" href="main-style.css">
 </head>
 <body>
+  <ul class="navigation-bar">
+    <div class="nav-link">
+      <a class="nav-title" href="index.html"><b>BC Course Map</b></a>
+      <a class="nav-cs-major">Computer Science</a>
+      <a class="nav-item nav-ac-major">Accounting</a>
+      <a class="nav-item nav-en-major">English</a>
+      <a class="nav-item nav-md-major">Media</a>
+    </div>
+    <button class="share-button">Share</button>
+  </ul>
   <div class="container">
     <div class="about">
       <h1 class="about-header">About</h1>
-      <p class="about-description">
-        Description Here. SAMPLE. SAMPLE. SAMPLE. SAMPLE. SAMPLE.
-        Description Here. SAMPLE. SAMPLE. SAMPLE. SAMPLE. SAMPLE.
-        Description Here. SAMPLE. SAMPLE. SAMPLE. SAMPLE. SAMPLE.
-      </p>
+      <h4>
+        Thank you for visiting BC course map, the guide to navigating through the courses of your major in Brooklyn College
+        and assisting with your course planning. With BC course map, you can navigate through your major&apos;s core courses,
+        checking the class details and prerequisites, as well as tracing your progress in your course journey as you go.
+      </h4>
+      <br>
+      <h4>
+        With BC Course Map, you can navigate through your major's core courses, checking the class details
+        and prerequisites, as well as tracing your progress in your course journey as you go.
+      </h4>
+      <br>
+      <h4>
+        Choose your major from the selection to get started!
+      </h4>
     </div>
     <div class="background">
       <div class="maroon-stripe"></div>
       <div class="yellow-stripe"></div>
       <div class="majors">
         <button class="cs-major">Computer Science</button>
-        <button class="bm-major">Business Management</button>
         <button class="ac-major">Accounting</button>
-        <button class="is-major">Information Systems</button>
+        <button class="en-major">English</button>
+        <button class="md-major">Media</button>
       </div>
     </div>
+  </div>
+  <div class="mission-statement">
+    <h1>Mission Statement</h1>
+    <br>
+    <h4>
+      At BC course map, we understand the student&apos;s struggle and confusion with planning their academic journey. With
+      the vast variety of classes offered along with the minute details that students have to get a grasp of, finding the
+      right classes can be frustrating. Through using our website, you will have access to all the class information you
+      need gathered in one place and have a better understanding of course-planning.
+    </h4>
+    <br>
+    <h4>
+      We dedicate this platform to Brooklyn College students who struggle with course-planning. Whether you&apos;re a
+      freshman or returnee, we hope to guide you to the right path of graduation with the exception of
+      course-planning frustrations. Start exploring our webpage today!
+    </h4>
   </div>
 </body>
 <script src="main-script.js"></script>
