--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
   <ul class="navigation-bar">
     <div class="nav-link">
-      <a class="nav-title" href="index.html"><b>BC Course Map</b></a>
+        <a class="nav-title" href="index.html"><b>BC Course Map</b></a>
       <a class="nav-cs-major">Computer Science</a>
-      <a class="nav-item nav-ac-major">Accounting</a>
+      <a class="nav-item nav-ac-major" href="accounting-roadmap.html">Accounting</a>
       <a class="nav-item nav-en-major">English</a>
       <a class="nav-item nav-md-major">Media</a>
     </div>
-    <button class="share-button">Share</button>
+    <button class="share-button" id="shareBtn">Share</button>
   </ul>
   <div class="container">
     <div class="about">
@@ -63,5 +63,6 @@
     </h4>
   </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 <script src="main-script.js"></script>
 </html>
