--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <ul class="navigation-bar">
     <div class="nav-link">
         <a class="nav-title" href="index.html"><b>BC Course Map</b></a>
-      <a class="nav-cs-major">Computer Science</a>
+      <a class="nav-cs-major" href=cs-roadmap.html>Computer Science</a>
       <a class="nav-item nav-ac-major" href="accounting-roadmap.html">Accounting</a>
       <a class="nav-item nav-en-major">English</a>
       <a class="nav-item nav-md-major">Media</a>
