colors and nav bar

--- a/cs-roadmap.html
+++ b/cs-roadmap.html
@@ -8,6 +8,17 @@
 </head>
 <body>
 
+  <ul class="navigation-bar">
+    <div class="nav-link">
+      <a class="nav-title" href="index.html"><b>BC Course Map</b></a>
+      <a class="nav-cs-major" href=cs-roadmap.html>Computer Science</a>
+      <a class="nav-item nav-ac-major" href="accounting-roadmap.html">Accounting</a>
+      <a class="nav-item nav-en-major">English</a>
+      <a class="nav-item nav-md-major">Media</a>
+    </div>
+    <button class="share-button" id="shareBtn">Share</button>
+  </ul>
+
   <div class="container">
 
     <div class="top-section">
@@ -41,11 +52,11 @@
         <button class="cisc1110 cisc1215">CISC 1110 OR CISC 1215: Intro To C++ OR Python</button>
         <button class="cisc1170">CISC 1170: Java Programming</button>
         <button class="cisc3115">CISC 3115: Modern Techniques</button>
-        <button class="cisc3130">CISC 3115: Data Structures</button>
+        <button class="cisc3130">CISC 3130: Data Structures</button>
         <button class="cisc3142">CISC 3142: Programming Paradigms In C++</button>
         <button class="invisible"></button>
         <button class="invisible"></button>
-        <button class="cisc4900">Group Research Project</button>
+        <button class="cisc4900">CISC 4900: Independent And Group Research Project</button>
       </div>
 
       <div class="column-5">
@@ -56,7 +67,7 @@
         <button class="cisc3140">CISC 3140: Web Apps</button>
         <button class="cisc3000-4899">CISC 3000-4899: Three Advanced CIS Electives</button>
         <button class="invisible"></button>
-        <button class="cisc5001">CISC 5001: Independent Research Project</button>
+        <button class="cisc5001">CISC 5001: Independent Study And Research</button>
       </div>
 
       <div class="column-6">
@@ -74,4 +85,5 @@
   </div>
 
 </body>
+<script src="roadmap-script.js"></script>
 </html>
