changed button positioning

--- a/cs-roadmap.html
+++ b/cs-roadmap.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CS Roadmap</title>
+  <title>BC Course Map</title>
   <link rel="stylesheet" href="roadmap-style.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
   <div class="container">
 
     <div class="top-section">
-      <button class="start">Start</button>
+      <button class="cs-start">Start</button>
     </div>
 
     <div class="bottom-section">
@@ -45,15 +45,15 @@
         <button class="invisible"></button>
         <button class="cisc2210">CISC 2210: Discrete Structures</button>
         <button class="cisc3310">CISC 3310: Computer Architecture</button>
-        <button class="cisc3320">CISC 3320: Operating Systems</button>
+        <button class="cisc3320" style="position: relative; left: -100px;">CISC 3320: Operating Systems</button>
       </div>
 
       <div class="column-4">
-        <button class="cisc1110 cisc1215">CISC 1110 OR CISC 1215: Intro To C++ OR Python</button>
-        <button class="cisc1170">CISC 1170: Java Programming</button>
-        <button class="cisc3115">CISC 3115: Modern Techniques</button>
-        <button class="cisc3130">CISC 3130: Data Structures</button>
-        <button class="cisc3142">CISC 3142: Programming Paradigms In C++</button>
+        <button class="cisc1110 cisc1215" style="position: relative; left: -50px;">CISC 1110 OR CISC 1215: Intro To C++ OR Python</button>
+        <button class="cisc1170" style="position: relative; left: -50px;">CISC 1170: Java Programming</button>
+        <button class="cisc3115" style="position: relative; right: -100px;">CISC 3115: Modern Techniques</button>
+        <button class="cisc3130" style="position: relative; right: -100px;">CISC 3130: Data Structures</button>
+        <button class="cisc3142" style="position: relative; left: -100px;">CISC 3142: Programming Paradigms In C++</button>
         <button class="invisible"></button>
         <button class="invisible"></button>
         <button class="cisc4900">CISC 4900: Independent And Group Research Project</button>
