--- a/cs-roadmap.html
+++ b/cs-roadmap.html
@@ -26,58 +26,193 @@
     </div>
 
     <div class="bottom-section">
-
       <div class="column-1">
         <button class="passed-ap-exam">If Passed AP Exam</button>
         <button class="invisible"></button>
-        <button class="math1201">MATH 1201: Calculus 1</button>
-        <button class="math1206">MATH 1206: Calculus 2</button>
-        <button class="math2501">MATH 2501: Probability And Statistics</button>
+        <div class="tooltip">
+          <button class="math1201">MATH 1201: Calculus 1</button>
+            <span class="tooltiptext">
+              Mathematics 1201 is an introduction to calculus: limits and continuity; derivatives and integrals of algebraic, exponential, logarithmic, 
+              and trigonometric functions of one variable; methods of numerical approximation, and applications of the derivative to mathematics, physics, engineering, biology, chemistry, and other fields.
+            </span>
+        </div>
+        <div class="tooltip">
+          <button class="math1206">MATH 1206: Calculus 2</button>
+              <span class="tooltiptext">
+                Trigonometric and inverse trigonometric functions, techniques (closed form and numerical) and 
+                applications of integration for functions of one variable, improper integrals, l'Hopital's rule, sequences, series, and polar coordinates.
+              </span>
+        </div>
+        <div class="tooltip">
+          <button class="math2501">MATH 2501: Probability And Statistics</button>
+            <span class="tooltiptext">
+              Sample spaces; combinatorial theory; elementary probability; random variables; 
+              discrete and continuous probability distributions; confidence intervals; hypothesis testing.
+            </span>
+        </div>
       </div>
 
       <div class="column-2">
-        <button class="math1006">MATH 1006: College Algebra</button>
-        <button class="math1011">MATH 1011: Precalculus</button>
+        <div class="tooltip">
+          <button class="math1006">MATH 1006: College Algebra</button>
+            <span class="tooltiptext">
+              Real Numbers, Sets and Intervals, Absolute Value, Exponents and Radicals, Algebraic Expressions, Polynomials, Rational Expressions, Factoring, Solving Basic Equations, 
+              Solving Equations Involving Radicals, Solving Quadratic Equations, The Coordinate Plane, Lines, Introduction to Functions and Relations, Linear Functions in Two Variables, Systems of Linear Equations, Graphs of linear and quadratic functions.
+            </span>
+        </div>
+        <div class="tooltip">
+          <button class="math1011">MATH 1011: Precalculus</button>
+            <span class="tooltiptext">
+              Preparation for calculus. Trigonometry. The concept of function, including, linear and quadratic functions, composition of functions, 
+              polynomials and rational functions, exponential, logarithmic, trigonometric, and inverse trigonometric functions. Conic sections. Binomial theorem. Introduction to limit ideas.
+            </span>
+        </div>
       </div>
 
       <div class="column-3">
         <button class="invisible"></button>
         <button class="invisible"></button>
-        <button class="cisc2210">CISC 2210: Discrete Structures</button>
-        <button class="cisc3310">CISC 3310: Computer Architecture</button>
-        <button class="cisc3320" style="position: relative; left: -100px;">CISC 3320: Operating Systems</button>
+        <div class="tooltip">
+          <button class="cisc2210">CISC 2210: Discrete Structures</button>
+            <span class="tooltiptext">
+              Elementary set theory, functions, relations, and Boolean algebra. Switching circuits, gating networks. Definition and analysis of algorithms. 
+              Applications of graph theory to computer science. Related algorithms. Introduction to combinatorial computing and counting arguments. Introduction to error analysis.
+            </span>
+        </div>
+        <div class="tooltip">
+          <button class="cisc3310">CISC 3310: Computer Architecture</button>
+            <span class="tooltiptext">
+              Introduction to digital logic. Basic digital circuits. Boolean algebra and combinational logic, data representation and transfer, digital arithmetic. Instruction sets. Introduction to assembly languages: 
+              ALU and memory reference instructions, flow control, subroutine linkage, arrays and structures. Memory. I/O systems. Performance. Relationship between software and architecture.
+            </span>
+        </div>
+        <div class="tooltip">
+          <button class="cisc3320" style="position: relative; left: -100px;">CISC 3320: Operating Systems</button>
+            <span class="tooltiptext">
+              Design and implementation of operating systems for large computers. Multiprogramming, multiprocessing, time sharing. Resource allocation and scheduling. 
+              Communications, conversational computing, computer networks. Memory protection, interrupts, segmentation, paging, and virtual memories.
+            </span>
+        </div>
       </div>
 
       <div class="column-4">
-        <button class="cisc1110 cisc1215" style="position: relative; left: -50px;">CISC 1110 OR CISC 1215: Intro To C++ OR Python</button>
-        <button class="cisc1170" style="position: relative; left: -50px;">CISC 1170: Java Programming</button>
-        <button class="cisc3115" style="position: relative; right: -100px;">CISC 3115: Modern Techniques</button>
-        <button class="cisc3130" style="position: relative; right: -100px;">CISC 3130: Data Structures</button>
-        <button class="cisc3142" style="position: relative; left: -100px;">CISC 3142: Programming Paradigms In C++</button>
+        <div class="tooltip">
+          <button class="cisc1110 cisc1215" style="position: relative; left: -50px;">CISC 1110 OR CISC 1215: Intro To C++ OR Python</button>
+            <span class="tooltiptext">
+              CISC 1110:
+              Algorithms, computers and programs. Writing, debugging, and testing programs. Loops and conditional control structures. Functions and parameter passing. 
+              Arrays, strings and simple classes. Sorting, searching and other basic algorithms. Input and output. Programming applications selected from various disciplines. History and basic concepts of computer science.
+              <br><br>
+              CISC 1215:
+              The Python programming language. Algorithms, computers and programs. Writing, debugging, and testing programs. Loops and conditional control structures. 
+              Function definition and parameter passing. Strings, Lists, and Tuples. Sorting, searching and other basic algorithms. Input and output. Programming applications selected from various areas. Python tools. History and basic concepts of computer science.
+            </span>
+        </div>
+        <div class="tooltip">
+          <button class="cisc1170" style="position: relative; left: -50px;">CISC 1170: Java Programming</button>
+            <span class="tooltiptext">
+              Intensive introduction to Java for students who have completed a programming course in another language. The facilities of the Java programming language core and the key Java class libraries. 
+              Imperative and procedural programming in Java. Elementary object-oriented programming. File processing, exception handling, and an introduction to graphical user interface programming.
+            </span>
+        </div>
+        <div class="tooltip">
+          <button class="cisc3115" style="position: relative; right: -100px;">CISC 3115: Modern Techniques</button>
+            <span class="tooltiptext">
+              A second course in programming. Programming techniques emphasizing reliability, maintainability, and reusability. Multi-file programs. Abstract data types. Objects, classes, and object-oriented design. 
+              Test suites, test drivers, and testing strategies; debugging, assertions, and an introduction to formal techniques. Recursion, event-driven programming and threads, GUI programming, and simple network programming.
+          </span>
+        </div>
+        <div class="tooltip">
+          <button class="cisc3130" style="position: relative; right: -100px;">CISC 3130: Data Structures</button>
+            <span class="tooltiptext">
+              Container classes: their design, implementations, and applications. Sequences: vectors, linked lists, stacks, queues, deques, lists. 
+              Associative structures: sets, maps and their hash and tree underlying representations. Sorting and searching techniques. Collection frameworks and hierarchies.
+            </span>
+        </div>
+        <div class="tooltip">
+          <button class="cisc3142" style="position: relative; left: -100px;">CISC 3142: Programming Paradigms In C++</button>
+            <span class="tooltiptext">
+              An introduction to C++ and its roles providing support for object-oriented programming, generic programming, procedural programming, and low-level programming. 
+              The C++ memory model, and topics in explicit memory management. Storage classes, scope, and compilation stages. The Standard Template Library. Comparison with Java.
+            </span>
+        </div>
+        <button class="invisible"></button> 
         <button class="invisible"></button>
-        <button class="invisible"></button>
-        <button class="cisc4900">CISC 4900: Independent And Group Research Project</button>
-      </div>
+        <div class="tooltip">  
+          <button class="cisc4900">CISC 4900: Independent And Group Research Project</button>
+            <span class="tooltiptext">
+              Planning and development of a real computer systems project supervised by a faculty member. Projects may involve group participation. 
+              Achievement measured by demonstrable attainment of the project's goals. Written report.
+            </span>
+        </div>
+        </div>
 
       <div class="column-5">
         <button class="invisible"></button>
-        <button class="cisc1115">CISC 1115: Intro To Java</button>
+        <div class="tooltip">
+          <button class="cisc1115">CISC 1115: Intro To Java</button>
+            <span class="tooltiptext">
+              Algorithms, computers and programs. Writing, debugging, and testing programs. Loops and conditional control structures. Method definition and parameter passing. Arrays, ArrayLists, and Strings. 
+              Sorting, searching and other basic algorithms. Input and output. Programming applications selected from various disciplines. History and basic concepts of computer science.
+            </span>
+        </div>
         <button class="invisible"></button>
         <button class="invisible"></button>
-        <button class="cisc3140">CISC 3140: Web Apps</button>
+        <div class="tooltip">
+          <button class="cisc3140">CISC 3140: Web Apps</button>
+            <span class="tooltiptext">
+              Overview of full-stack implementation of large scale web applications. Team-based software development methodologies, tools and practice. Introduction to modern HTML, CSS. Separation of structure, style and behavior. 
+              JavaScript, dynamic types, functional programming, prototypal classes, and closures. HTTP client-server communication, synchronous and asynchronous communication. Java Server Pages, simple database creation, programmatic queries and updates.
+            </span>
+        </div>
         <button class="cisc3000-4899">CISC 3000-4899: Three Advanced CIS Electives</button>
         <button class="invisible"></button>
-        <button class="cisc5001">CISC 5001: Independent Study And Research</button>
+        <div class="tooltip">
+          <button class="cisc5001">CISC 5001: Independent Study And Research</button>
+            <span class="tooltiptext">
+              Independent research study or project supervised by a faculty member; approved reading; project report or written examination.
+            </span>
+        </div>
       </div>
 
       <div class="column-6">
         <button class="invisible"></button>
-        <button class="engl1010">ENGL 1010: English Composition 1</button>
-        <button class="engl1012">ENGL 1012: English Composition 2</button>
-        <button class="cisc2820w">CISC 2820W: Computer And Ethics</button>
+        <div class="tooltip">
+          <button class="engl1010">ENGL 1010: English Composition 1</button>
+            <span class="tooltiptext">
+              Workshop in expository writing: strategies of, and practice in, analytical reading and writing about texts. Fundamentals of grammar and syntax. 
+              Frequent assignments in writing summaries, analyses, comparisons of texts, and such other expository forms as narration, description, and argumentation. Emphasis on writing as a process: invention, revision, editing. Satisfies Pathways Required Core English composition requirement.
+            </span>
+        </div>
+        <div class="tooltip">
+          <button class="engl1012">ENGL 1012: English Composition 2</button>
+            <span class="tooltiptext">
+              Writing-intensive seminar focusing on a topic chosen by the instructor. Provides students with an opportunity to explore a particular subject in depth and further develop skills of critical thinking, research techniques, and clear expression necessary for academic writing. 
+              Students should take English *1012 [2] directly after completing English 1010 [1]. Topics include: The Fool in Literature; Reading the City; 1960s: Decade of Revolt; Novels of the Jazz Age; Cross-Cultural Writing and the Arts. Satisfies Pathways Required Core English composition requirement.
+            </span>
+        </div>
+        <div class="tooltip">
+          <button class="cisc2820w">CISC 2820W: Computer And Ethics</button>
+            <span class="tooltiptext">
+              Analysis of ethical issues pertaining to computers and the workplace, anonymity and privacy, copyright and patent law (as applied to software), computer crime, security, unauthorized use, codes of conduct for computer professionals, access and availability of computing technologies. 
+              Application of theoretical frameworks such as virtue ethics, deontological theories and utilitarianism to the ethical problems encountered in computing technologies. Writing intensive course.
+            </span>
+        </div>
         <button class="invisible"></button>
-        <button class="cisc3220">CISC 3220: Algorithms</button>
-        <button class="cisc3230">CISC 3230: Theoretical Computer Science</button>
+        <div class="tooltip">
+          <button class="cisc3220">CISC 3220: Algorithms</button>
+            <span class="tooltiptext">
+              Algorithms, data structures, and their analysis. Applications for and solution to recurrence problems. Upper and lower bounds on complexities of various problems. 
+              Classification by design structures. Sorting methods, graph and selection algorithms. Pattern matching. Efficient computation of transitive closure and equivalences. NP-completeness.
+            </span>
+        </div>
+        <div class="tooltip">
+          <button class="cisc3230">CISC 3230: Theoretical Computer Science</button>
+            <span class="tooltiptext">
+              Overview of theoretical computer science. Formal language theory, computability theory. Finite automata, context-free and regular grammars, push-down automata, and Turing machines. 
+              Other models of computation, including recursive functions. Universal program and unsolvability.
+            </span>
+        </div>
       </div>
 
     </div>
