cs roadmap tooltip alignment

--- a/cs-roadmap.html
+++ b/cs-roadmap.html
@@ -88,7 +88,7 @@
         </div>
         <div class="tooltip">
           <button class="cisc3320" style="position: relative; left: -100px;">CISC 3320: Operating Systems</button>
-            <span class="tooltiptext">
+            <span class="tooltiptext" style="right: -130%">
               Design and implementation of operating systems for large computers. Multiprogramming, multiprocessing, time sharing. Resource allocation and scheduling. 
               Communications, conversational computing, computer networks. Memory protection, interrupts, segmentation, paging, and virtual memories.
             </span>
@@ -98,7 +98,7 @@
       <div class="column-4">
         <div class="tooltip">
           <button class="cisc1110 cisc1215" style="position: relative; left: -50px;">CISC 1110 OR CISC 1215: Intro To C++ OR Python</button>
-            <span class="tooltiptext">
+            <span class="tooltiptext" style="right: -160%">
               CISC 1110:
               Algorithms, computers and programs. Writing, debugging, and testing programs. Loops and conditional control structures. Functions and parameter passing. 
               Arrays, strings and simple classes. Sorting, searching and other basic algorithms. Input and output. Programming applications selected from various disciplines. History and basic concepts of computer science.
@@ -110,28 +110,28 @@
         </div>
         <div class="tooltip">
           <button class="cisc1170" style="position: relative; left: -50px;">CISC 1170: Java Programming</button>
-            <span class="tooltiptext">
+            <span class="tooltiptext" style="right: -160%">
               Intensive introduction to Java for students who have completed a programming course in another language. The facilities of the Java programming language core and the key Java class libraries. 
               Imperative and procedural programming in Java. Elementary object-oriented programming. File processing, exception handling, and an introduction to graphical user interface programming.
             </span>
         </div>
         <div class="tooltip">
           <button class="cisc3115" style="position: relative; right: -100px;">CISC 3115: Modern Techniques</button>
-            <span class="tooltiptext">
+            <span class="tooltiptext" style="left: 165%">
               A second course in programming. Programming techniques emphasizing reliability, maintainability, and reusability. Multi-file programs. Abstract data types. Objects, classes, and object-oriented design. 
               Test suites, test drivers, and testing strategies; debugging, assertions, and an introduction to formal techniques. Recursion, event-driven programming and threads, GUI programming, and simple network programming.
           </span>
         </div>
         <div class="tooltip">
           <button class="cisc3130" style="position: relative; right: -100px;">CISC 3130: Data Structures</button>
-            <span class="tooltiptext">
+            <span class="tooltiptext" style="left: 165%">
               Container classes: their design, implementations, and applications. Sequences: vectors, linked lists, stacks, queues, deques, lists. 
               Associative structures: sets, maps and their hash and tree underlying representations. Sorting and searching techniques. Collection frameworks and hierarchies.
             </span>
         </div>
         <div class="tooltip">
           <button class="cisc3142" style="position: relative; left: -100px;">CISC 3142: Programming Paradigms In C++</button>
-            <span class="tooltiptext">
+            <span class="tooltiptext" style="left: 35%">
               An introduction to C++ and its roles providing support for object-oriented programming, generic programming, procedural programming, and low-level programming. 
               The C++ memory model, and topics in explicit memory management. Storage classes, scope, and compilation stages. The Standard Template Library. Comparison with Java.
             </span>
@@ -179,21 +179,21 @@
         <button class="invisible"></button>
         <div class="tooltip">
           <button class="engl1010">ENGL 1010: English Composition 1</button>
-            <span class="tooltiptext">
+            <span class="tooltiptext" style="right: 100%">
               Workshop in expository writing: strategies of, and practice in, analytical reading and writing about texts. Fundamentals of grammar and syntax. 
               Frequent assignments in writing summaries, analyses, comparisons of texts, and such other expository forms as narration, description, and argumentation. Emphasis on writing as a process: invention, revision, editing. Satisfies Pathways Required Core English composition requirement.
             </span>
         </div>
         <div class="tooltip">
           <button class="engl1012">ENGL 1012: English Composition 2</button>
-            <span class="tooltiptext">
+            <span class="tooltiptext" style="right: 100%">
               Writing-intensive seminar focusing on a topic chosen by the instructor. Provides students with an opportunity to explore a particular subject in depth and further develop skills of critical thinking, research techniques, and clear expression necessary for academic writing. 
               Students should take English *1012 [2] directly after completing English 1010 [1]. Topics include: The Fool in Literature; Reading the City; 1960s: Decade of Revolt; Novels of the Jazz Age; Cross-Cultural Writing and the Arts. Satisfies Pathways Required Core English composition requirement.
             </span>
         </div>
         <div class="tooltip">
           <button class="cisc2820w">CISC 2820W: Computer And Ethics</button>
-            <span class="tooltiptext">
+            <span class="tooltiptext" style="right: 100%">
               Analysis of ethical issues pertaining to computers and the workplace, anonymity and privacy, copyright and patent law (as applied to software), computer crime, security, unauthorized use, codes of conduct for computer professionals, access and availability of computing technologies. 
               Application of theoretical frameworks such as virtue ethics, deontological theories and utilitarianism to the ethical problems encountered in computing technologies. Writing intensive course.
             </span>
@@ -201,14 +201,14 @@
         <button class="invisible"></button>
         <div class="tooltip">
           <button class="cisc3220">CISC 3220: Algorithms</button>
-            <span class="tooltiptext">
+            <span class="tooltiptext" style="right: 100%">
               Algorithms, data structures, and their analysis. Applications for and solution to recurrence problems. Upper and lower bounds on complexities of various problems. 
               Classification by design structures. Sorting methods, graph and selection algorithms. Pattern matching. Efficient computation of transitive closure and equivalences. NP-completeness.
             </span>
         </div>
         <div class="tooltip">
           <button class="cisc3230">CISC 3230: Theoretical Computer Science</button>
-            <span class="tooltiptext">
+            <span class="tooltiptext" style="right: 100%">
               Overview of theoretical computer science. Formal language theory, computability theory. Finite automata, context-free and regular grammars, push-down automata, and Turing machines. 
               Other models of computation, including recursive functions. Universal program and unsolvability.
             </span>
