--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <a class="nav-title" href="index.html"><b>BC Course Map</b></a>
       <a class="nav-cs-major" href=cs-roadmap.html>Computer Science</a>
       <a class="nav-item nav-ac-major" href="accounting-roadmap.html">Accounting</a>
-      <a class="nav-item nav-en-major">English</a>
-      <a class="nav-item nav-md-major">Media</a>
+      <a class="nav-item nav-en-major" href="english-roadmap.html">English</a>
+      <a class="nav-item nav-md-major" href="multimedia-roadmap.html">Media</a>
     </div>
     <button class="share-button" id="shareBtn">Share</button>
   </ul>
