--- a/english-roadmap.html
+++ b/english-roadmap.html
@@ -101,5 +101,6 @@
   </div>
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 <script src="roadmap-script.js"></script>
 </html>
