--- a/cs-roadmap.html
+++ b/cs-roadmap.html
@@ -5,11 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BC Course Map</title>
   <link rel="stylesheet" href="roadmap-style.css">
+  <link rel="icon" type="image" href="logo.png">
 </head>
 <body>
 
   <ul class="navigation-bar">
     <div class="nav-link">
+      <img src="logo.png" alt="Logo" class="logo">
         <a class="nav-title" href="index.html"><b>BC Course Map</b></a>
         <a class="nav-cs-major" href=cs-roadmap.html>Computer Science</a>
         <a class="nav-item nav-ac-major" href="accounting-roadmap.html">Accounting</a>
