Updated english tooltips descriptions

--- a/english-roadmap.html
+++ b/english-roadmap.html
@@ -34,16 +34,50 @@
 
       <div class="column-1">
         <button class="invisible"></button>
+        <div class="tooltip">
         <button>ENGL 1012: English Composition 2</button>
+        <span class="tooltiptext">
+          Writing-intensive seminar focusing on a topic chosen by the instructor. 
+          Provides students with an opportunity to explore a particular subject in depth and further develop skills of critical thinking, 
+          research techniques, and clear expression necessary for academic writing.Topics include: The Fool in Literature; Reading the City; 1960s: Decade of Revolt; Novels of the Jazz Age; Cross-Cultural Writing and the Arts.
+        </span>
+      </div>
+      <div class="tooltip">
         <button>ENGL 2120: Overview Of Literary Study 1</button>
+        <span class="tooltiptext">
+          Studies in literature and culture from the Middle Ages through the Eighteenth Century. 
+          Part I of a two-course overview with three principal focuses: 
+          1. the major literary and intellectual movements in historical perspective; 2.
+          the language of literary analysis and the close reading of texts in the genres; and 3. 
+          literature as viewed through the various lenses of contemporary theory and critical discourses.
+        </span>
+      </div>
+      <div class="tooltip">
         <button>ENGL 2121: Overview Of Literary Study 2</button>
+        <span class="tooltiptext">
+          Studies in literature and culture from the Middle Ages through the Eighteenth Century. 
+          Part I of a two-course overview with three principal focuses: 
+          1. the major literary and intellectual movements in historical perspective; 2.
+          the language of literary analysis and the close reading of texts in the genres; and 3. 
+          literature as viewed through the various lenses of contemporary theory and critical discourses.
+        </span>
+        </div>
         <button>ENGL Electives</button>
         <button>ENGL Electives</button>
         <button>ENGL/CMLT 4000: Seminar</button>
       </div>
 
       <div class="column-2">
+        <div class="tooltip">
         <button>ENGL 1010: English Composition 1</button>
+        <span class="tooltiptext">
+          Workshop in expository writing: strategies of, and practice in, 
+          analytical reading and writing about texts. 
+          Fundamentals of grammar and syntax. Frequent assignments in writing summaries, analyses, 
+          comparisons of texts, and such other expository forms as narration, description, and argumentation. 
+          Emphasis on writing as a process: invention, revision, editing. Satisfies Pathways Required Core English composition requirement. 
+        </span>
+      </div>
       </div>
 
       <div class="column-3">
